# FinPilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  langgraph.json  main.py  pyproject.toml  todo.md
src/agent/: builder.py  graph.py
src/agents/ingestion/: builder.py  graph.py
src/agents/retrieval/: builder.py  graph.py  sql_builder.py  sql_graph.py
src/core/: settings.py
src/db/: deps.py  session.py  test.py
src/graph/: builder.py  graph.py
src/ingestion/: builder.py  extract_tables.py  graph.py
src/models/: base.py  chat.py  financial_facts.py  income_statement.py
src/models/middlewares/: cors_middleware.py
src/nodes/: chunker.py  document_parsing_node.py  embedder.py  financial_document_validator.py  knowledge_merger.py  semantic_distill_router.py  table_distillizer.py  test.py  text_distillizer.py  validation_router.py  vector_store.py
src/nodes/ingestion/: chunker.py  document_parsing_node.py  embedder.py  financial_document_validator.py  financial_facts_extractor.py  knowledge_merger.py  semantic_distill_router.py  sql_writer.py  table_distillizer.py  text_distillizer.py  validation_router.py  vector_store.py
src/nodes/retrieval/: end_cap.py  (+15 more)
src/prompts/: text_distillizer.py
src/runtime/: embedding_model.py  llms.py  vector_store.py
src/states/: chunking.py  embedding.py  financial_profile.py  knowledge_merger.py  parsing.py  semantic_distill_channels.py  table_distllizer.py  text_distillizer.py
src/tools/: aggregation.py  atomic.py  metrics.py  test.py  tools.py  writer.py
src/utils/: def_temp.py  string_utils.py
(+31 files in other folders)
