[project]
name = "finpilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.66.0",
    "dotenv>=0.9.9",
    "langchain>=1.2.0",
    "langchain-groq>=1.1.1",
    "langdetect>=1.0.9",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "transformers>=4.57.3",
    "unstructured[pdf]>=0.18.21",
]
