[project]
name = "finpilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.0",
    "docling>=2.66.0",
    "dotenv>=0.9.9",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "langdetect>=1.0.9",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "sentence-transformers>=5.2.0",
    "transformers>=4.57.3",
    "unstructured[pdf]>=0.18.21",
]
